Sprint 11 HomeWork ver.2 (included placeholder, update button,warning for connection error and empty track list)

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -35,4 +35,12 @@
 
     </style>
 
+    <style name="ButtonUpdate" parent="Theme.MyMediaPlayer">
+
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="cornerRadius">@dimen/button_update_radius</item>
+
+    </style>
+
 </resources>
