--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,8 +40,6 @@
             style="@style/MyEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
             android:background="@drawable/round_edittext_background"
             android:clickable="true"
             android:drawableStart="@drawable/icon_search_gray"
@@ -49,10 +47,12 @@
             android:focusable="true"
             android:fontFamily="@font/ys_text_regular"
             android:hint="@string/input_hint"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLength="20"
             android:paddingStart="13dp"
             android:paddingEnd="12dp"
+            android:singleLine="true"
             android:textSize="@dimen/setting_text_size" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -73,14 +73,52 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/song_list_layout" />
 
-        <TextView android:id="@+id/placeholderMessage"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+
+                android:id="@+id/track_not_found"
+                android:layout_width="@dimen/search_imageview_width"
+                android:layout_height="@dimen/search_imageview_height"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/search_imageview_marginTop"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/il_search_light_mode"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/placeholderMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/search_side_margins_size"
+                android:layout_marginTop="@dimen/search_textview_marginTop"
+                android:layout_marginRight="@dimen/search_side_margins_size"
+                android:fontFamily="@font/ys_display_medium"
+                android:textAlignment="center"
+                android:textColor="?attr/colorOnPrimary"
+                android:textSize="@dimen/search_text_size" />
+
+            <Button
+                android:id="@+id/button_update"
+                style="@style/ButtonUpdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/search_side_margins_size"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/update"
+                android:textAllCaps="false"
+                android:textSize="@dimen/search_button_text_size"
+                android:visibility="gone"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </LinearLayout>
 
     </FrameLayout>
 
