--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,12 @@
 
     </style>
 
+    <style name="ButtonUpdate" parent="Theme.MyMediaPlayer">
+
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">@dimen/button_update_radius</item>
+
+    </style>
+
 </resources>
