Sprint 11 HomeWork ver.3 (fixed comments on the task)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,4 +39,11 @@
 
     </style>
 
+    <style name="ImageViewSearch" parent="Theme.MyMediaPlayer">
+
+        <item name="android:src">@drawable/il_search_light_mode</item>
+
+    </style>
+
+
 </resources>
