--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -43,4 +43,10 @@
 
     </style>
 
+    <style name="ImageViewSearch" parent="Theme.MyMediaPlayer">
+
+        <item name="android:src">@drawable/il_search_light_mode</item>
+
+    </style>
+
 </resources>
