--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -49,4 +49,10 @@
 
     </style>
 
+    <style name="SwitchButton" parent="Theme.MyMediaPlayer">
+
+        <item name="android:src">@drawable/switch_off</item>
+
+    </style>
+
 </resources>
