--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,5 +45,10 @@
 
     </style>
 
+    <style name="SwitchButton" parent="Theme.MyMediaPlayer">
+
+        <item name="android:src">@drawable/switch_off</item>
+
+    </style>
 
 </resources>
