Sprint 12 HomeWork Initial ver.2 (included Dark or Light Switcher, added UO Tracks searching history,Clear method for tracks, saved tracks into SharePreferences).Fixed the main remarks from the reviewer

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -3,6 +3,7 @@
 
     <style name="MyEditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textColorHint">@color/black</item>
     </style>
 
     <style name="ClearButtonStyle" parent="android:Widget.Holo.Button.Borderless">
