Sprint 12 HomeWork ver.3 Fixed the main remarks from the reviewer: placed track top of the saved list(if such track already exists), changed color of the hint text in Dark mode,changed size of reduced the size of the Clear button in EditText

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -40,5 +40,9 @@
 
     </style>
 
+    <style name="HintText" parent="@android:style/TextAppearance">
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
 
 </resources>
