--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,6 +37,7 @@
 
         <EditText
             android:id="@+id/inputTextSearch"
+            style="@style/HintText"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@drawable/round_edittext_background"
@@ -46,7 +47,6 @@
             android:focusable="true"
             android:fontFamily="@font/ys_text_regular"
             android:hint="@string/input_hint"
-            android:textColorHint="@color/black"
             android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLength="20"
@@ -59,12 +59,13 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/clearTextSearch"
             style="@style/ClearButtonStyle"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:drawableRight="@drawable/icon_clear"
+            android:drawableEnd="@drawable/icon_clear"
             android:paddingEnd="12dp"
             android:visibility="gone" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/track_recyclerView"
