--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -40,6 +40,17 @@
 
     </style>
 
+    <style name="BackButtonStyle" parent="android:Widget.Holo.Button.Borderless">
+
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:layout_marginLeft">16dp</item>
+
+    </style>
+
     <style name="HintText" parent="@android:style/TextAppearance">
         <item name="android:textColorHint">@color/black</item>
     </style>
