--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,4 +94,16 @@
 
     </style>
 
+    <style name="TitleTrack">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin_size_8</item>
+        <item name="android:layout_marginBottom">@dimen/margin_size_8</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/gray_light</item>
+        <item name="android:letterSpacing">0</item>
+
+    </style>
+
 </resources>
