--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="margin_size_12">12dp</dimen>
     <dimen name="margin_size_24">24dp</dimen>
     <dimen name="margin_size_54">54dp</dimen>
+    <dimen name="margin_size_28">28dp</dimen>
 
 
 
