--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,7 +94,7 @@
 
     </style>
 
-    <style name="TitleTrack">
+    <style name="TrackTitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/margin_size_8</item>
@@ -106,4 +106,23 @@
 
     </style>
 
+    <style name="TrackData">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin_size_8</item>
+        <item name="android:layout_marginBottom">@dimen/margin_size_8</item>
+        <item name="android:gravity">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="fontWeight">400</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="Player">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
 </resources>
