--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -31,7 +31,7 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
         <item name="android:letterSpacing">0</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/btn_text_color</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="iconGravity">textStart</item>
