--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="artist_time_text_size">11sp</dimen>
 
     <dimen name="corner_radius">16dp</dimen>
+    <dimen name="corner_radius_8">8dp</dimen>
     <dimen name="button_update_radius">54dp</dimen>
     <dimen name="setting_rounded_Corners">2dp</dimen>
     <dimen name="button_height">220dp</dimen>
