--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -7,9 +7,7 @@
     android:layout_height="wrap_content"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".AudioPlayerActivity">
@@ -54,19 +52,22 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTop_toBottomOf="@id/player_back_menu"
-            app:srcCompat="@drawable/album1" />
+            app:srcCompat="@drawable/album_placeholder" />
 
         <TextView
             android:id="@+id/track_name"
             style="@style/Player"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_size_8"
             android:layout_marginEnd="@dimen/margin_size_8"
+            android:layout_marginTop="@dimen/margin_size_24"
             android:fontFamily="@font/ys_text_medium"
             android:letterSpacing="0"
             android:textSize="@dimen/button_text_size"
             app:layout_constrainedWidth="true"
+            android:maxLines="1"
+            android:ellipsize="end"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTop_toBottomOf="@id/cover"
@@ -75,7 +76,7 @@
         <TextView
             android:id="@+id/artist_name"
             style="@style/Player"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_size_8"
             android:layout_marginTop="@dimen/margin_size_12"
@@ -84,6 +85,9 @@
             android:fontFamily="@font/ys_text_medium"
             android:letterSpacing="0"
             android:textSize="@dimen/ys_medium_14_text"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTop_toBottomOf="@id/track_name"
             tools:text="The Beatles" />
@@ -162,9 +166,11 @@
             android:id="@+id/playing_time"
             style="@style/TrackTitle"
             android:text="@string/track_time"
+            android:layout_marginTop="@dimen/margin_size_39"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTag="playing_timeTag"
-            app:layout_constraintTop_toBottomOf="@id/progress" />
+            app:layout_constraintTop_toBottomOf="@id/progress"
+            app:layout_constraintBottom_toTopOf="@id/album"/>
 
         <TextView
             android:id="@+id/album"
@@ -172,7 +178,8 @@
             android:text="@string/album"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTag="albumTag"
-            app:layout_constraintTop_toBottomOf="@id/playing_time" />
+            app:layout_constraintTop_toBottomOf="@id/playing_time"
+            app:layout_constraintBottom_toTopOf="@id/year"/>
 
         <TextView
             android:id="@+id/year"
@@ -180,7 +187,8 @@
             android:text="@string/year"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTag="yearTag"
-            app:layout_constraintTop_toBottomOf="@id/album" />
+            app:layout_constraintTop_toBottomOf="@id/album"
+            app:layout_constraintBottom_toTopOf="@id/genre"/>
 
         <TextView
             android:id="@+id/genre"
@@ -188,7 +196,8 @@
             android:text="@string/genre"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintTag="genreTag"
-            app:layout_constraintTop_toBottomOf="@id/year" />
+            app:layout_constraintTop_toBottomOf="@id/year"
+            app:layout_constraintBottom_toTopOf="@id/country"/>
 
         <TextView
             android:id="@+id/country"
