--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,7 +47,7 @@
             android:focusable="true"
             android:fontFamily="@font/ys_text_regular"
             android:hint="@string/input_hint"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLength="20"
             android:paddingStart="13dp"
