--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,7 +47,7 @@
             android:focusable="true"
             android:fontFamily="@font/ys_text_regular"
             android:hint="@string/input_hint"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLength="20"
             android:paddingStart="13dp"
@@ -66,6 +66,12 @@
             android:paddingEnd="12dp"
             android:visibility="gone" />
 
+        <ProgressBar android:id="@+id/progressBar"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/yp_blue"
+            android:visibility="gone"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/track_recyclerView"
