--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="gray_light">#AEAFB4</color>
     <color name="fab_background_play_button">#FF000000</color>
     <color name="fab_play_button">#FFFFFFFF</color>
+    <color name="yp_blue">#3772E7</color>
 
 </resources>
