Practicum Sprint 14 HomeWork ver.2.0 Added ProgressBar;Debounce;Play/Pause button;Progress time during playing

--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -118,6 +118,7 @@
             android:contentDescription="@string/play"
             android:foregroundGravity="center"
             android:src="@drawable/icon_play_light"
+            android:enabled="false"
             app:backgroundTint="@color/fab_play_button"
             app:elevation="0dp"
             app:fabCustomSize="84dp"
